versions/1.0/cn/docs/download/download/index.md
# Download HugeGraph

LLMS 索引： [llms.txt](/versions/1.0/cn/llms.txt)

---

### Latest version

The latest HugeGraph: **0.12.0**, released on _2021-12-31_.

| components       | description   | download                                                                                                         |
|------------------|---------------|------------------------------------------------------------------------------------------------------------------|
| HugeGraph-Server | HugeGraph的主程序 | [0.12.0](https://github.com/hugegraph/hugegraph/releases/download/v0.12.0/hugegraph-0.12.0.tar.gz)               |
| HugeGraph-Hubble | 基于Web的可视化图形界面 | [1.6.0](https://github.com/hugegraph/hugegraph-hubble/releases/download/v1.6.0/hugegraph-hubble-1.6.0.tar.gz)    |
| HugeGraph-Loader | 数据导入工具        | [0.12.0](https://github.com/hugegraph/hugegraph-loader/releases/download/v0.12.0/hugegraph-loader-0.12.0.tar.gz) |
| HugeGraph-Tools  | 命令行工具集        | [1.6.0](https://github.com/hugegraph/hugegraph-tools/releases/download/v1.6.0/hugegraph-tools-1.6.0.tar.gz)      |

### Versions mapping

| server                                                                                             | client                                                                                 | loader                                                                                                           | hubble                                                                                                             | common                                                                                   | tools                                                                                                       |
|----------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------|
| [0.12.0](https://github.com/hugegraph/hugegraph/releases/download/v0.12.0/hugegraph-0.12.0.tar.gz) | [2.0.1](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-client/2.0.1) | [0.12.0](https://github.com/hugegraph/hugegraph-loader/releases/download/v0.12.0/hugegraph-loader-0.12.0.tar.gz) | [1.6.0](https://github.com/hugegraph/hugegraph-hubble/releases/download/v1.6.0/hugegraph-hubble-1.6.0.tar.gz)      | [2.0.1](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-common/2.0.1)   | [1.6.0](https://github.com/hugegraph/hugegraph-tools/releases/download/v1.6.0/hugegraph-tools-1.6.0.tar.gz) |
| [0.11.2](https://github.com/hugegraph/hugegraph/releases/download/v0.11.2/hugegraph-0.11.2.tar.gz) | [1.9.1](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-client/1.9.1) | [0.11.1](https://github.com/hugegraph/hugegraph-loader/releases/download/v0.11.1/hugegraph-loader-0.11.1.tar.gz) | [1.5.0](https://github.com/hugegraph/hugegraph-hubble/releases/download/v1.5.0/hugegraph-hubble-1.5.0.tar.gz)      | [1.8.1](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-common/1.8.1)   | [1.5.0](https://github.com/hugegraph/hugegraph-tools/releases/download/v1.5.0/hugegraph-tools-1.5.0.tar.gz) |
| [0.10.4](https://github.com/hugegraph/hugegraph/releases/download/v0.10.4/hugegraph-0.10.4.tar.gz) | [1.8.0](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-client/1.8.0) | [0.10.1](https://github.com/hugegraph/hugegraph-loader/releases/download/v0.10.1/hugegraph-loader-0.10.1.tar.gz) | [0.10.0](https://github.com/hugegraph/hugegraph-studio/releases/download/v0.10.0/hugegraph-studio-0.10.0.tar.gz)   | [1.6.16](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-common/1.6.16) | [1.4.0](https://github.com/hugegraph/hugegraph-tools/releases/download/v1.4.0/hugegraph-tools-1.4.0.tar.gz) |
| [0.9.2](https://github.com/hugegraph/hugegraph/releases/download/v0.9.2/hugegraph-0.9.2.tar.gz)    | [1.7.0](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-client/1.7.0) | [0.9.0](https://github.com/hugegraph/hugegraph-loader/releases/download/v0.9.0/hugegraph-loader-0.9.0.tar.gz)    | [0.9.0](https://github.com/hugegraph/hugegraph-studio/releases/download/v0.9.0/hugegraph-studio-0.9.0.tar.gz)      | [1.6.0](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-common/1.6.0)   | [1.3.0](https://github.com/hugegraph/hugegraph-tools/releases/download/v1.3.0/hugegraph-tools-1.3.0.tar.gz) |
| [0.8.0](https://github.com/hugegraph/hugegraph/releases/download/v0.8.0/hugegraph-0.8.0.tar.gz)    | [1.6.4](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-client/1.6.4) | [0.8.0](https://github.com/hugegraph/hugegraph-loader/releases/download/v0.8.0/hugegraph-loader-0.8.0.tar.gz)    | [0.8.0](https://github.com/hugegraph/hugegraph-studio/releases/download/v0.8.0/hugegraph-studio-0.8.0.tar.gz)      | [1.5.3](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-common/1.5.3)   | [1.2.0](https://github.com/hugegraph/hugegraph-tools/releases/download/v1.2.0/hugegraph-tools-1.2.0.tar.gz) |
| [0.7.4](https://github.com/hugegraph/hugegraph/releases/download/v0.7.4/hugegraph-0.7.4.tar.gz)    | [1.5.8](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-client/1.5.8) | [0.7.0](https://github.com/hugegraph/hugegraph-loader/releases/download/v0.7.0/hugegraph-loader-0.7.0.tar.gz)    | [0.7.0](https://github.com/hugegraph/hugegraph-studio/releases/download/v0.7.0/hugegraph-studio-0.7.0.tar.gz)      | [1.4.9](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-common/1.4.9)   | [1.1.0](https://github.com/hugegraph/hugegraph-tools/releases/download/v1.1.0/hugegraph-tools-1.1.0.tar.gz) |
| [0.6.1](https://github.com/hugegraph/hugegraph/releases/download/v0.6.1/hugegraph-0.6.1.tar.gz)    | [1.5.6](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-client/1.5.6) | [0.6.1](https://github.com/hugegraph/hugegraph-loader/releases/download/v0.6.1/hugegraph-loader-0.6.1.tar.gz)    | [0.6.1](https://github.com/hugegraph/hugegraph-studio/releases/download/v0.6.1/hugegraph-studio-0.6.1.tar.gz)      | [1.4.3](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-common/1.4.3)   | [1.0.0](https://github.com/hugegraph/hugegraph-tools/releases/download/v1.0.0/hugegraph-tools-1.0.0.tar.gz) |
| [0.5.6](https://hugegraph.github.io/hugegraph-downloads/hugegraph-release-0.5.6-SNAPSHOT.tar.gz)   | [1.5.0](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-client/1.5.0) | [0.5.6](https://hugegraph.github.io/hugegraph-downloads/hugegraph-loader/hugegraph-loader-0.5.6-bin.tar.gz)      | [0.5.0](https://hugegraph.github.io/hugegraph-downloads/hugegraph-studio/hugestudio-release-0.5.0-SNAPSHOT.tar.gz) | 1.4.0                                                                                    |                                                                                                             |
| [0.4.5](https://hugegraph.github.io/hugegraph-downloads/hugegraph-release-0.4.5-SNAPSHOT.tar.gz)   | [1.4.7](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-client/1.4.7) | [0.2.2](https://hugegraph.github.io/hugegraph-downloads/hugegraph-loader/hugegraph-loader-0.2.2-bin.tar.gz)      | [0.4.1](https://hugegraph.github.io/hugegraph-downloads/hugegraph-studio/hugestudio-release-0.4.1-SNAPSHOT.tar.gz) | 1.3.12                                                                                   |                                                                                                             |

> 说明：最新的图分析和展示平台为 hubble，支持 0.10 及之后的 server 版本；studio 为 server 0.10.x 以及之前的版本的图分析和展示平台，其功能从 0.10 起不再更新。
### Release Notes

- 2021-12-31: Release HugeGraph 0.12.0，see [HugeGraph 0.12.0 Release Notes](/versions/1.0/docs/changelog/hugegraph-0.12.0-release-notes)
- 2020-11-20: Release HugeGraph 0.11.2，see [HugeGraph 0.11.2 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.0/cn/docs/changelog/hugegraph-0.11.2-release-notes)
- 2019-11-08: Release HugeGraph 0.10.4，see [HugeGraph 0.10.4 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.0/cn/docs/changelog/hugegraph-0.10.4-release-notes)
- 2019-04-19: Release HugeGraph 0.9.2，see [HugeGraph 0.9.2 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.0/cn/docs/changelog/hugegraph-0.9.2-release-notes)
- 2018-11-23: Release HugeGraph 0.8.0，see [HugeGraph 0.8.0 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.0/cn/docs/changelog/hugegraph-0.8.0-release-notes)
- 2018-07-30: Release HugeGraph 0.7.4，see [HugeGraph 0.7.4 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.0/cn/docs/changelog/hugegraph-0.7.4-release-notes)
- 2018-06-01: Release HugeGraph 0.6.1，see [HugeGraph 0.6.1 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.0/cn/docs/changelog/hugegraph-0.6.1-release-notes)
- 2018-03-29: Release HugeGraph 0.5.6，see [HugeGraph 0.5.6 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.0/cn/docs/changelog/hugegraph-0.5.6-release-notes)
- 2018-01-12: Release HugeGraph 0.4.4，see [HugeGraph 0.4.4 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.0/cn/docs/changelog/hugegraph-0.4.4-release-notes)
- 2017-11-06: Release HugeGraph 0.3.3，see [HugeGraph 0.3.3 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.0/cn/docs/changelog/hugegraph-0.3.3-release-notes)
- 2017-09-08: Release HugeGraph 0.2.4，see [HugeGraph 0.2.4 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.0/cn/docs/changelog/hugegraph-0.2.4-release-notes)
- 2017-08-15: Release HugeGraph 0.2，see [HugeGraph 0.2 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.0/cn/docs/changelog/hugegraph-0.2-release-notes)
