versions/1.3/cn/docs/download/download/index.md
# Download HugeGraph

LLMS 索引： [llms.txt](/versions/1.3/cn/llms.txt)

---

### Latest version

The latest HugeGraph: **1.2.0**, released on _2023-12-28_([how to build from source](/versions/1.3/cn/docs/quickstart/hugegraph/hugegraph-server/)).

| components          | description                                      | download                                                                                                                                                                                                                          |
| ------------------- | ------------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| HugeGraph-Server    | HugeGraph 的主程序                               | [1.2.0](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-incubating-1.2.0.tar.gz)([备用](https://dlcdn.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-incubating-1.2.0.tar.gz))                     |
| HugeGraph-Toolchain | 数据导入/导出/备份, Web 可视化图形界面等工具合集 | [1.2.0](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-toolchain-incubating-1.2.0.tar.gz)([备用](https://dlcdn.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-toolchain-incubating-1.2.0.tar.gz)) |

### Binary Versions mapping

| Version | Release Date | server                                                                                                                                                                                                                                                                                                                                       | toolchain                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | Release Notes                                                   |
| ------- | ------------  | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------- |
| 1.2.0   | 2023-12-28   | [[Binary](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-incubating-1.2.0.tar.gz)] [[Sign](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-incubating-1.2.0.tar.gz.asc)] [[SHA512](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-incubating-1.2.0.tar.gz.sha512)] | [[Binary](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-toolchain-incubating-1.2.0.tar.gz)] [[Sign](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-toolchain-incubating-1.2.0.tar.gz.asc)] [[SHA512](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-toolchain-incubating-1.2.0.tar.gz.sha512)] | [Release-Notes](/versions/1.3/docs/changelog/hugegraph-1.2.0-release-notes/) |

### Source Versions mapping

| Version | Release Date | server                                                                                                                                                                                                                                                                                                                                                   | toolchain                                                                                                                                                                                                                                                                                                                                                                              | computer                                                                                                                                                                                                                                                                                                                                                                            | common                                                                                                                                                                                                                                                                                                                                                                           | Release Notes                                                   |
| ------- | ------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------- |
| 1.2.0   | 2023-12-28   | [[Source](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-incubating-1.2.0-src.tar.gz)] [[Sign](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-incubating-1.2.0-src.tar.gz.asc)] [[SHA512](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-incubating-1.2.0-src.tar.gz.sha512)] | [[Source](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-toolchain-incubating-1.2.0-src.tar.gz)] [[Sign](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-toolchain-incubating-1.2.0-src.tar.gz.asc)] [[SHA512](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-toolchain-incubating-1.2.0-src.tar.gz.sha512)] | [[Source](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-computer-incubating-1.2.0-src.tar.gz)] [[Sign](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-computer-incubating-1.2.0-src.tar.gz.asc)] [[SHA512](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-computer-incubating-1.2.0-src.tar.gz.sha512)] | [[Source](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-commons-incubating-1.2.0-src.tar.gz)] [[Sign](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-commons-incubating-1.2.0-src.tar.gz.asc)] [[SHA512](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-commons-incubating-1.2.0-src.tar.gz.sha512)] | [Release-Notes](/versions/1.3/docs/changelog/hugegraph-1.2.0-release-notes/) |

---

### 旧版本下载地址 (Outdated Versions Mapping)
Apache 版本.

| Version | Release Date | server                                                                                                                                                                                                                                                                                                                                       | toolchain                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | Release Notes                                                   |
| ------- | ------------  | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------- |
| 1.2.0   | 2023-12-28   | [[Binary](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-incubating-1.2.0.tar.gz)] [[Sign](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-incubating-1.2.0.tar.gz.asc)] [[SHA512](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-incubating-1.2.0.tar.gz.sha512)] | [[Binary](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-toolchain-incubating-1.2.0.tar.gz)] [[Sign](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-toolchain-incubating-1.2.0.tar.gz.asc)] [[SHA512](https://downloads.apache.org/incubator/hugegraph/1.2.0/apache-hugegraph-toolchain-incubating-1.2.0.tar.gz.sha512)] | [Release-Notes](/versions/1.3/docs/changelog/hugegraph-1.2.0-release-notes/) |
| 1.0.0   | 2023-02-22   | [[Binary](https://downloads.apache.org/incubator/hugegraph/1.0.0/apache-hugegraph-incubating-1.0.0.tar.gz)] [[Sign](https://downloads.apache.org/incubator/hugegraph/1.0.0/apache-hugegraph-incubating-1.0.0.tar.gz.asc)] [[SHA512](https://downloads.apache.org/incubator/hugegraph/1.0.0/apache-hugegraph-incubating-1.0.0.tar.gz.sha512)] | [[Binary](https://downloads.apache.org/incubator/hugegraph/1.0.0/apache-hugegraph-toolchain-incubating-1.0.0.tar.gz)] [[Sign](https://downloads.apache.org/incubator/hugegraph/1.0.0/apache-hugegraph-toolchain-incubating-1.0.0.tar.gz.asc)] [[SHA512](https://downloads.apache.org/incubator/hugegraph/1.0.0/apache-hugegraph-toolchain-incubating-1.0.0.tar.gz.sha512)]  | [Release-Notes](/versions/1.3/docs/changelog/hugegraph-1.0.0-release-notes/) |

注: 
1. 请大家尽早迁移到最新 release 版本上, 社区将不再维护 `1.0.0` 前的旧版本(非 ASF 版本)
2. `1.2.0` 是最后一个兼容 Java8 的主版本, 请尽早迁移运行时 ≥ `Java11`

| server                                                                                                    | client                                                                                 | loader                                                                                                           | hubble                                                                                                             | common                                                                                   | tools                                                                                                       |
|-----------------------------------------------------------------------------------------------------------| -------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------- |
| [0.12.0](https://github.com/apache/incubator-hugegraph/releases/download/v0.12.0/hugegraph-0.12.0.tar.gz) | [2.0.1](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-client/2.0.1) | [0.12.0](https://github.com/hugegraph/hugegraph-loader/releases/download/v0.12.0/hugegraph-loader-0.12.0.tar.gz) | [1.6.0](https://github.com/hugegraph/hugegraph-hubble/releases/download/v1.6.0/hugegraph-hubble-1.6.0.tar.gz)      | [2.0.1](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-common/2.0.1)   | [1.6.0](https://github.com/hugegraph/hugegraph-tools/releases/download/v1.6.0/hugegraph-tools-1.6.0.tar.gz) |
| [0.11.2](https://github.com/apache/incubator-hugegraph/releases/download/v0.11.2/hugegraph-0.11.2.tar.gz) | [1.9.1](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-client/1.9.1) | [0.11.1](https://github.com/hugegraph/hugegraph-loader/releases/download/v0.11.1/hugegraph-loader-0.11.1.tar.gz) | [1.5.0](https://github.com/hugegraph/hugegraph-hubble/releases/download/v1.5.0/hugegraph-hubble-1.5.0.tar.gz)      | [1.8.1](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-common/1.8.1)   | [1.5.0](https://github.com/hugegraph/hugegraph-tools/releases/download/v1.5.0/hugegraph-tools-1.5.0.tar.gz) |
| [0.10.4](https://github.com/apache/incubator-hugegraph/releases/download/v0.10.4/hugegraph-0.10.4.tar.gz) | [1.8.0](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-client/1.8.0) | [0.10.1](https://github.com/hugegraph/hugegraph-loader/releases/download/v0.10.1/hugegraph-loader-0.10.1.tar.gz) | [0.10.0](https://github.com/hugegraph/hugegraph-studio/releases/download/v0.10.0/hugegraph-studio-0.10.0.tar.gz)   | [1.6.16](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-common/1.6.16) | [1.4.0](https://github.com/hugegraph/hugegraph-tools/releases/download/v1.4.0/hugegraph-tools-1.4.0.tar.gz) |
| [0.9.2](https://github.com/apache/incubator-hugegraph/releases/download/v0.9.2/hugegraph-0.9.2.tar.gz)    | [1.7.0](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-client/1.7.0) | [0.9.0](https://github.com/hugegraph/hugegraph-loader/releases/download/v0.9.0/hugegraph-loader-0.9.0.tar.gz)    | [0.9.0](https://github.com/hugegraph/hugegraph-studio/releases/download/v0.9.0/hugegraph-studio-0.9.0.tar.gz)      | [1.6.0](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-common/1.6.0)   | [1.3.0](https://github.com/hugegraph/hugegraph-tools/releases/download/v1.3.0/hugegraph-tools-1.3.0.tar.gz) |
| [0.8.0](https://github.com/apache/incubator-hugegraph/releases/download/v0.8.0/hugegraph-0.8.0.tar.gz)    | [1.6.4](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-client/1.6.4) | [0.8.0](https://github.com/hugegraph/hugegraph-loader/releases/download/v0.8.0/hugegraph-loader-0.8.0.tar.gz)    | [0.8.0](https://github.com/hugegraph/hugegraph-studio/releases/download/v0.8.0/hugegraph-studio-0.8.0.tar.gz)      | [1.5.3](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-common/1.5.3)   | [1.2.0](https://github.com/hugegraph/hugegraph-tools/releases/download/v1.2.0/hugegraph-tools-1.2.0.tar.gz) |
| [0.7.4](https://github.com/apache/incubator-hugegraph/releases/download/v0.7.4/hugegraph-0.7.4.tar.gz)    | [1.5.8](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-client/1.5.8) | [0.7.0](https://github.com/hugegraph/hugegraph-loader/releases/download/v0.7.0/hugegraph-loader-0.7.0.tar.gz)    | [0.7.0](https://github.com/hugegraph/hugegraph-studio/releases/download/v0.7.0/hugegraph-studio-0.7.0.tar.gz)      | [1.4.9](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-common/1.4.9)   | [1.1.0](https://github.com/hugegraph/hugegraph-tools/releases/download/v1.1.0/hugegraph-tools-1.1.0.tar.gz) |
| [0.6.1](https://github.com/apache/incubator-hugegraph/releases/download/v0.6.1/hugegraph-0.6.1.tar.gz)    | [1.5.6](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-client/1.5.6) | [0.6.1](https://github.com/hugegraph/hugegraph-loader/releases/download/v0.6.1/hugegraph-loader-0.6.1.tar.gz)    | [0.6.1](https://github.com/hugegraph/hugegraph-studio/releases/download/v0.6.1/hugegraph-studio-0.6.1.tar.gz)      | [1.4.3](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-common/1.4.3)   | [1.0.0](https://github.com/hugegraph/hugegraph-tools/releases/download/v1.0.0/hugegraph-tools-1.0.0.tar.gz) |
| [0.5.6](https://hugegraph.github.io/hugegraph-downloads/hugegraph-release-0.5.6-SNAPSHOT.tar.gz)          | [1.5.0](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-client/1.5.0) | [0.5.6](https://hugegraph.github.io/hugegraph-downloads/hugegraph-loader/hugegraph-loader-0.5.6-bin.tar.gz)      | [0.5.0](https://hugegraph.github.io/hugegraph-downloads/hugegraph-studio/hugestudio-release-0.5.0-SNAPSHOT.tar.gz) | 1.4.0                                                                                    |                                                                                                             |
| [0.4.5](https://hugegraph.github.io/hugegraph-downloads/hugegraph-release-0.4.5-SNAPSHOT.tar.gz)          | [1.4.7](https://mvnrepository.com/artifact/com.baidu.hugegraph/hugegraph-client/1.4.7) | [0.2.2](https://hugegraph.github.io/hugegraph-downloads/hugegraph-loader/hugegraph-loader-0.2.2-bin.tar.gz)      | [0.4.1](https://hugegraph.github.io/hugegraph-downloads/hugegraph-studio/hugestudio-release-0.4.1-SNAPSHOT.tar.gz) | 1.3.12                                                                                   |                                                                                                             |

> 说明：最新的图分析和展示平台为 hubble，支持 0.10 及之后的 server 版本；studio 为 server 0.10.x 以及之前的版本的图分析和展示平台，其功能从 0.10 起不再更新。

### Release Notes (old version)

- 2021-12-31: Release HugeGraph 0.12.0，see [HugeGraph 0.12.0 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.3/cn/docs/changelog/hugegraph-0.12.0-release-notes)
- 2020-11-20: Release HugeGraph 0.11.2，see [HugeGraph 0.11.2 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.3/docs/changelog/)
- 2019-11-08: Release HugeGraph 0.10.4，see [HugeGraph 0.10.4 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.3/docs/changelog/)
- 2019-04-19: Release HugeGraph 0.9.2，see [HugeGraph 0.9.2 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.3/docs/changelog/)
- 2018-11-23: Release HugeGraph 0.8.0，see [HugeGraph 0.8.0 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.3/docs/changelog/)
- 2018-07-30: Release HugeGraph 0.7.4，see [HugeGraph 0.7.4 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.3/docs/changelog/)
- 2018-06-01: Release HugeGraph 0.6.1，see [HugeGraph 0.6.1 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.3/docs/changelog/)
- 2018-03-29: Release HugeGraph 0.5.6，see [HugeGraph 0.5.6 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.3/docs/changelog/)
- 2018-01-12: Release HugeGraph 0.4.4，see [HugeGraph 0.4.4 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.3/docs/changelog/)
- 2017-11-06: Release HugeGraph 0.3.3，see [HugeGraph 0.3.3 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.3/docs/changelog/)
- 2017-09-08: Release HugeGraph 0.2.4，see [HugeGraph 0.2.4 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.3/docs/changelog/)
- 2017-08-15: Release HugeGraph 0.2，see [HugeGraph 0.2 Release Notes](https://hugegraph-oink.staged.apache.org/versions/1.3/docs/changelog/)
